force-app/main/default/objects/RGC_Finance__c/RGC_Finance__c.object-meta.xml
<CustomObject>
    <label>RGC Finance</label>
    <nameField>
        <displayFormat>RGC-{00}</displayFormat>
        <label>RGC Finance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RGC Finances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>