force-app/main/default/objects/RGC_Finance__c/fields/Department_Expense__c.field-meta.xml
<CustomField>
    <fullName>Department_Expense__c</fullName>
    <label>Department Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RGC Research, Business &amp; Operations Mgmt</fullName>
            </value>
            <value>
                <fullName>Sequencing &amp; Lab Operations</fullName>
            </value>
            <value>
                <fullName>Analytical Genetics</fullName>
            </value>
            <value>
                <fullName>Genome Informatics &amp; Data Engineering</fullName>
            </value>
            <value>
                <fullName>Therapeutic Area Genetics</fullName>
            </value>
            <value>
                <fullName>RGC Management</fullName>
            </value>
            <value>
                <fullName>RGC Biology</fullName>
            </value>
            <value>
                <fullName>Clinical Informatics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>