force-app/main/default/objects/RGC_Finance__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEOPLE EXPENSE</fullName>
            </value>
            <value>
                <fullName>LAB SUPPLIES</fullName>
            </value>
            <value>
                <fullName>OUTSIDE TESTING SERVICES</fullName>
            </value>
            <value>
                <fullName>IT EXTERNAL EXPENSES</fullName>
            </value>
            <value>
                <fullName>DEPRECIATION</fullName>
            </value>
            <value>
                <fullName>LICENSES, RESEARCH CONTRACTS, REGULATORY FEES</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>