force-app/main/default/objects/RGC_Finance__c/fields/Total_OPEX__c.field-meta.xml
<CustomField>
    <fullName>Total_OPEX__c</fullName>
    <formula>YTD_Actuals__c - YTD_BOD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Actual vs Budget</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>