force-app/main/default/objects/RGC_Finance__c/fields/YTD_Actuals__c.field-meta.xml
<CustomField>
    <fullName>YTD_Actuals__c</fullName>
    <label>YTD Actuals</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>