force-app/main/default/objects/RGC_Finance__c/fields/YTD_BOD__c.field-meta.xml
<CustomField>
    <fullName>YTD_BOD__c</fullName>
    <label>YTD BOD</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>