force-app/main/default/objects/RGC_Finance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense__c</columns>
    <columns>Total_OPEX__c</columns>
    <columns>YTD_Actuals__c</columns>
    <columns>YTD_BOD__c</columns>
    <columns>Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>